# FSR

p3dx_control/config/: pioneer3dx.yaml
p3dx_description/urdf/: pioneer3dx.urdf  pioneer3dx.xacro
p3dx_gazebo/: CMakeLists.txt  diff_robot.rviz
p3dx_gazebo/include/: planner2.h  spline_planner.h
p3dx_gazebo/launch/: diff_robot.launch  gmapping.launch  spawn.launch
p3dx_gazebo/maps/: obstaclemap.yaml  obstacles.pgm  obstacles.yaml
p3dx_gazebo/src/: LowPassFilter.cpp  controller.cpp  image_convert.cpp  planner2.cpp  spline_planner.cpp
p3dx_gazebo/src/plugin/: wheel_vel_plugin.cpp
p3dx_gazebo/worlds/: obstacles.world
